--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.1",
-    "three": "^0.161.0"
+    "react-tsparticles": "^2.6.0",
+    "styled-components": "^5.3.11",
+    "three": "^0.161.0",
+    "tsparticles": "^2.6.0",
+    "web-vitals": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "@types/three": "^0.161.2",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
