--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "generate-sitemap": "node generate-sitemap.js"
   },
   "dependencies": {
     "@react-three/drei": "^9.99.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.1",
     "react-tsparticles": "^2.6.0",
+    "sitemap": "^8.0.0",
     "styled-components": "^5.3.11",
     "three": "^0.161.0",
     "tsparticles": "^2.6.0",
